force-app/main/default/objects/MergeJobLog__c/MergeJobLog__c.object-meta.xml
<CustomObject>
    <description>Log for merge operations in the Duplication Manager</description>
    <label>Merge Job Log</label>
    <nameField>
        <displayFormat>MJL-{0000}</displayFormat>
        <label>Log Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Merge Job Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>