force-app/main/default/objects/MergeJobLog__c/fields/BatchJobId__c.field-meta.xml
<CustomField>
    <fullName>BatchJobId__c</fullName>
    <description>ID of the batch job that ran the merge operation</description>
    <label>Batch Job ID</label>
    <length>36</length>
    <type>Text</type>
</CustomField>