force-app/main/default/objects/MergeJobLog__c/fields/ConfigurationId__c.field-meta.xml
<CustomField>
    <fullName>ConfigurationId__c</fullName>
    <description
  >ID of the configuration used for the merge operation</description>
    <label>Configuration ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>