force-app/main/default/objects/MergeJobLog__c/fields/ConfigurationName__c.field-meta.xml
<CustomField>
    <fullName>ConfigurationName__c</fullName>
    <description
  >Name of the configuration used for the merge operation</description>
    <label>Configuration Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>