force-app/main/default/objects/MergeJobLog__c/fields/ErrorMessage__c.field-meta.xml
<CustomField>
    <fullName>ErrorMessage__c</fullName>
    <description>Error messages from the merge operation</description>
    <label>Error Messages</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>