force-app/main/default/objects/MergeJobLog__c/fields/ExecutionTime__c.field-meta.xml
<CustomField>
    <fullName>ExecutionTime__c</fullName>
    <description>Time when the merge operation was executed</description>
    <label>Execution Time</label>
    <type>DateTime</type>
</CustomField>