force-app/main/default/objects/MergeJobLog__c/fields/FieldMergeDetails__c.field-meta.xml
<CustomField>
    <fullName>FieldMergeDetails__c</fullName>
    <description>Details about which fields were merged and how</description>
    <label>Field Merge Details</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>