force-app/main/default/objects/MergeJobLog__c/fields/InitiatedBy__c.field-meta.xml
<CustomField>
    <fullName>InitiatedBy__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>User who initiated the merge</description>
    <label>Initiated By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>MergeJobLogs</relationshipName>
    <type>Lookup</type>
</CustomField>