force-app/main/default/objects/MergeJobLog__c/fields/IsScheduledJob__c.field-meta.xml
<CustomField>
    <fullName>IsScheduledJob__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Whether this merge was run as part of a scheduled job</description>
    <label>Is Scheduled Job</label>
    <type>Checkbox</type>
</CustomField>