force-app/main/default/objects/MergeJobLog__c/fields/JobId__c.field-meta.xml
<CustomField>
    <fullName>JobId__c</fullName>
    <description>ID of the job that performed the merge</description>
    <label>Job ID</label>
    <length>36</length>
    <type>Text</type>
</CustomField>