force-app/main/default/objects/MergeJobLog__c/fields/MasterId__c.field-meta.xml
<CustomField>
    <fullName>MasterId__c</fullName>
    <description>ID of the master record for the merge</description>
    <label>Master ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>