force-app/main/default/objects/MergeJobLog__c/fields/MatchScore__c.field-meta.xml
<CustomField>
    <fullName>MatchScore__c</fullName>
    <description>Match score of the duplicate records</description>
    <label>Match Score</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>