force-app/main/default/objects/MergeJobLog__c/fields/MergedIds__c.field-meta.xml
<CustomField>
    <fullName>MergedIds__c</fullName>
    <description>IDs of records that were merged</description>
    <label>Merged IDs</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>