force-app/main/default/objects/MergeJobLog__c/fields/MergeTime__c.field-meta.xml
<CustomField>
    <fullName>MergeTime__c</fullName>
    <description>Timestamp when the merge happened</description>
    <label>Merge Time</label>
    <type>DateTime</type>
</CustomField>