force-app/main/default/objects/MergeJobLog__c/fields/ObjectApiName__c.field-meta.xml
<CustomField>
    <fullName>ObjectApiName__c</fullName>
    <description>API name of the object that was merged</description>
    <label>Object API Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>