force-app/main/default/objects/MergeJobLog__c/fields/RecordIdsJSON__c.field-meta.xml
<CustomField>
    <fullName>RecordIdsJSON__c</fullName>
    <description>JSON representation of record IDs merged</description>
    <label>Record IDs JSON</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>