force-app/main/default/objects/MergeJobLog__c/fields/RecordsMerged__c.field-meta.xml
<CustomField>
    <fullName>RecordsMerged__c</fullName>
    <description>Number of records merged</description>
    <label>Records Merged</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>