force-app/main/default/objects/MergeJobLog__c/fields/UserId__c.field-meta.xml
<CustomField>
    <fullName>UserId__c</fullName>
    <description>ID of the user who initiated the merge</description>
    <label>User ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>